codedeploy-vpc.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  AWS CloudFormation Sample Template VPC_with_PublicIPs_And_DNS: Sample template
  that creates a VPC with DNS and public IPs enabled. Note that you are billed
  for the AWS resources that you use when you create a stack from this template.
Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      CidrBlock: 11.0.0.0/16
      Tags:
        - Key: Name
          Value: CodeDeploy
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 26d04ec1-15ec-467c-b812-6d23f41ff3b3
  PublicSubnetC:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: us-east-2c
      Tags:
        - Key: Name
          Value: PublicSubnetC
      VpcId: !Ref VPC
      CidrBlock: 11.0.2.0/24
    Metadata:
      'AWS::CloudFormation::Designer':
        id: cbf99f47-251d-4d04-9426-6dcc8875fe1e
  PublicSubnetB:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: us-east-2b
      Tags:
        - Key: Name
          Value: PublicSubnetB
      VpcId: !Ref VPC
      CidrBlock: 11.0.1.0/24
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 14e80b14-8f29-4bf9-8610-5cd17c1519bb
  PublicSubnetA:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: us-east-2a
      CidrBlock: 11.0.0.0/24
      Tags:
        - Key: Name
          Value: PublicSubnetA
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 523fe2b9-7777-43f5-aede-d3cfb08b43d7
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 9a23f153-d74e-462b-9a98-a9b3fcedfd05
  VPCGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 3cd396ed-22cf-4981-95d7-5315ebf77ca4
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: dee671ab-4987-4922-b6af-d854c5ba64a9
  PublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 84cd8c6a-8e5d-469f-89e9-69facbafaa31
  PublicSubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnetA
      RouteTableId: !Ref PublicRouteTable
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 09f5cf64-2aa8-4d46-9b4a-25fde6065223
  PublicSubnetNetworkAclAssociation:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref PublicSubnetA
      NetworkAclId: !GetAtt 
        - VPC
        - DefaultNetworkAcl
  WebServerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      Tags:
        - Key: Name
          Value: PublicBaseNet11
      GroupDescription: Enable HTTP ingress
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
    Metadata:
      'AWS::CloudFormation::Designer':
        id: a71f34a0-ab35-4b11-bdb3-99d594544c2f
  EC2SRTA2KR8U:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnetB
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 36ac26b2-6764-4074-837d-f5c01455131b
  EC2SRTAVR2M:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnetC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: ef469594-a7bb-41ed-bde0-8c511ba2b117
Outputs:
  VPCId:
    Description: VPC ID
    Value: !Ref VPC
    Export:
      Name: !Sub '${AWS::StackName}-VPCID'
  SubnetList:
    Description: the subnets of the VpcId
    Value: !Join 
      - ','
      - - !Ref PublicSubnetA
        - !Ref PublicSubnetB
        - !Ref PublicSubnetC
    Export:
      Name: !Sub '${AWS::StackName}-SubnetList'
  WebServerSecurityGroup:
    Description: The security group ID to use for public web servers
    Value: !GetAtt 
      - WebServerSecurityGroup
      - GroupId
    Export:
      Name: !Sub '${AWS::StackName}-SecurityGroupID'
Metadata:
  'AWS::CloudFormation::Designer':
    9a23f153-d74e-462b-9a98-a9b3fcedfd05:
      size:
        width: 60
        height: 60
      position:
        x: 60
        'y': 660
      z: 1
      embeds: []
    26d04ec1-15ec-467c-b812-6d23f41ff3b3:
      size:
        width: 1260
        height: 750
      position:
        x: 150
        'y': 90
      z: 1
      embeds:
        - a71f34a0-ab35-4b11-bdb3-99d594544c2f
        - dee671ab-4987-4922-b6af-d854c5ba64a9
        - 523fe2b9-7777-43f5-aede-d3cfb08b43d7
        - 14e80b14-8f29-4bf9-8610-5cd17c1519bb
        - cbf99f47-251d-4d04-9426-6dcc8875fe1e
    a71f34a0-ab35-4b11-bdb3-99d594544c2f:
      size:
        width: 60
        height: 60
      position:
        x: 300
        'y': 450
      z: 2
      parent: 26d04ec1-15ec-467c-b812-6d23f41ff3b3
      embeds: []
      iscontainedinside:
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
    dee671ab-4987-4922-b6af-d854c5ba64a9:
      size:
        width: 240
        height: 240
      position:
        x: 300
        'y': 150
      z: 2
      parent: 26d04ec1-15ec-467c-b812-6d23f41ff3b3
      embeds:
        - 84cd8c6a-8e5d-469f-89e9-69facbafaa31
      iscontainedinside:
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
    3cd396ed-22cf-4981-95d7-5315ebf77ca4:
      source:
        id: 26d04ec1-15ec-467c-b812-6d23f41ff3b3
      target:
        id: 9a23f153-d74e-462b-9a98-a9b3fcedfd05
      z: 1
    84cd8c6a-8e5d-469f-89e9-69facbafaa31:
      size:
        width: 60
        height: 60
      position:
        x: 330
        'y': 180
      z: 3
      parent: dee671ab-4987-4922-b6af-d854c5ba64a9
      embeds: []
      isassociatedwith:
        - 9a23f153-d74e-462b-9a98-a9b3fcedfd05
      iscontainedinside:
        - dee671ab-4987-4922-b6af-d854c5ba64a9
        - dee671ab-4987-4922-b6af-d854c5ba64a9
        - dee671ab-4987-4922-b6af-d854c5ba64a9
        - dee671ab-4987-4922-b6af-d854c5ba64a9
        - dee671ab-4987-4922-b6af-d854c5ba64a9
        - dee671ab-4987-4922-b6af-d854c5ba64a9
      dependson:
        - 3cd396ed-22cf-4981-95d7-5315ebf77ca4
    523fe2b9-7777-43f5-aede-d3cfb08b43d7:
      size:
        width: 150
        height: 150
      position:
        x: 480
        'y': 420
      z: 2
      parent: 26d04ec1-15ec-467c-b812-6d23f41ff3b3
      embeds: []
      iscontainedinside:
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
    09f5cf64-2aa8-4d46-9b4a-25fde6065223:
      source:
        id: dee671ab-4987-4922-b6af-d854c5ba64a9
      target:
        id: 523fe2b9-7777-43f5-aede-d3cfb08b43d7
      z: 2
    cbf99f47-251d-4d04-9426-6dcc8875fe1e:
      size:
        width: 150
        height: 150
      position:
        x: 630
        'y': 150
      z: 2
      parent: 26d04ec1-15ec-467c-b812-6d23f41ff3b3
      embeds: []
      iscontainedinside:
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
    14e80b14-8f29-4bf9-8610-5cd17c1519bb:
      size:
        width: 150
        height: 150
      position:
        x: 660
        'y': 330
      z: 2
      parent: 26d04ec1-15ec-467c-b812-6d23f41ff3b3
      embeds: []
      iscontainedinside:
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
        - 26d04ec1-15ec-467c-b812-6d23f41ff3b3
    36ac26b2-6764-4074-837d-f5c01455131b:
      source:
        id: dee671ab-4987-4922-b6af-d854c5ba64a9
      target:
        id: 14e80b14-8f29-4bf9-8610-5cd17c1519bb
      z: 2
    ef469594-a7bb-41ed-bde0-8c511ba2b117:
      source:
        id: dee671ab-4987-4922-b6af-d854c5ba64a9
      target:
        id: cbf99f47-251d-4d04-9426-6dcc8875fe1e
      z: 2
